# shadow-plugin-extras

./: CMakeLists.txt
quux/: CMakeLists.txt  README.md  example.xml
